--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2000-11-08  Michael Natterer  <mitch@gimp.org>
 
+	* plug-ins/print/RELNOTES
+	* plug-ins/print/print-canon.c: Version 4.0.2 (this time the
+	official one, not just the README saying 4.0.2 :)
+
+2000-11-08  Michael Natterer  <mitch@gimp.org>
+
 	* Makefile.am
 	* gimp.spec.in
 	* user_install
