Updated Polish translation
Former-commit-id: 2fa2f801db970f5040b7e75e10d5895eb7a06c60

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2000-11-08  Zbigniew Chyla  <cyba@gnome.pl>
+
+	* pl.po: Updated Polish translation
+
 2000-11-06  Sven Neumann  <sven@gimp.org>
 
 	* it.po: updates to the italian translation from
