--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+2000-11-08  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/script-fu/script-fu-scripts.c: cleaned up the code and 
+	moved interface variables into a structure, thus getting rid of 
+	most global variables. When a script is run, we now check that 
+	there's no Script-Fu interface active and fail silently if there 
+	is one. This is an ugly workaround for the fact that the script-fu 
+	interpreter can not handle multiple scripts at the same time. 
+	Sort of fixes bug #30665.
+
+	While I was on it, I added proper error reporting for script-fu
+	which should help significantly when debugging script-fus.
+	
+	* plug-ins/script-fu/script-fu.c: indentation and small cleanups.
+	
+	* plug-ins/script-fu/scripts/title-header.scm: fixed this script
+	which had been broken for a long time.
+
 2000-11-08  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/fp/fp_gdk.c
