updated the developers documentation
Former-commit-id: 3bf5c53997170a9a4b2aef386fc6c97a75623c7e

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,7 @@
+2000-11-08  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/libgimp-decl.txt: updated
+
 2000-10-16  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/libgimp-decl.txt
