--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-11-08  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/tile.c (tile): sanity check new width and height.
+	Wrong values might result in a divide by zero.
+
 2000-11-08  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/common/bz2.c
