--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Nov 13 01:28:24 PST 2000 Manish Singh <yosh@gimp.org>
+
+	* plug-ins/common/url.c: set all the locale variables we can, to
+	make sure we get predictable output from wget
+
 2000-11-11  Simon Budig <simon@gimp.org>
 
 	* app/interface.c: fixed #10554 by requesting a window
