--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2000-11-13  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+	
 2000-11-08  Zbigniew Chyla  <cyba@gnome.pl>
 
 	* pl.po: Updated Polish translation
