--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2000-11-14  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
 2000-11-13  Zbigniew Chyla  <cyba@gnome.pl>
 
 	* pl.po: Updated Polish translation
