--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2000-11-14  Sven Neumann  <sven@gimp.org>
+
+	* de.po: updated german translation
+
 2000-11-13  Zbigniew Chyla  <cyba@gnome.pl>
 
 	* pl.po: Updated Polish translation
