--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2000-11-14  Valek Filippov  <frob@df.ru>
+
+	* ru.po: Updated russian translation.
+
 2000-11-14  Sven Neumann  <sven@gimp.org>
 
 	* de.po: updated german translation
